--- a/Coursera-Capstone-Project.ipynb
+++ b/Coursera-Capstone-Project.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "print('Hello Capstone Project Course!')"
+    "print('Hello Cpastone Project Course!')"
    ]
   },
   {
